--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 <meta name="twitter:title" content="HMS FBLA - Community Service Project">
 <meta name="twitter:description" content="Huntsville Middle School presents (csp).">
 <meta name="twitter:image" content="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/paf5adbe016554130b916606cfc2c5b13/ogimage.jpeg?1611419846">
+    
+
+    <!-- Apple MacOS Pinned-->
+    <link rel="mask-icon" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/db6c7b11086f4ebda2231179c4ab40ac_logo_transparent.png" color="red">
 
     <link rel="icon" type="image/png" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/db6c7b11086f4ebda2231179c4ab40ac_logo_transparent.png">
     
