--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
 
     <!-- Apple MacOS Pinned-->
-    <link rel="mask-icon" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/db6c7b11086f4ebda2231179c4ab40ac_logo_transparent.png" color="red">
+    <link rel="mask-icon" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/a088057509584fc681784625b2de62df_logo_transparent.svg" color="red">
 
     <link rel="icon" type="image/png" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/db6c7b11086f4ebda2231179c4ab40ac_logo_transparent.png">
     
