--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <meta name="twitter:description" content="Have feedback? Reach the web developer of this website by using the form on this website. Not a fan of filling out a form? There&#039;s email too!">
 <meta name="twitter:image" content="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/p9662c533608f42dab64cc057e0ee5943/ogimage.jpeg?1611764598">
 
-    <link rel="icon" type="image/png" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/p9662c533608f42dab64cc057e0ee5943/favicon.png?1611764598">
+    <link rel="icon" type="image/png" href="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/c4dba2c9cddb409c8beec8d74e1578df_favicon_260x260-trans.png">
 
 <script type="application/ld+json">
     {
