--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@
                 <div id="imv9h" class="gpd-container">
                     <div id="id342" class="gdp-row">
                         <div id="itj0b" class="cell">
-                            <a id="i43oo" href="hmsfbla.1hsd.org" class="gpd-link-box">
+                            <a id="i43oo" href="https://hmsfbla.1hsd.org" class="gpd-link-box">
                                 <img id="inz97" src="/assets/uploads/logo/transparent.png" data-anim-type="heartBeat"/>
                             </a>
                         </div>
