--- a/index.html
+++ b/index.html
@@ -1605,12 +1605,12 @@
             <h1 id="ix0h7f" class="gpd-header">Students Working on our Project</h1>
             <div id="io33w8" class="gdp-row gpd-grid">
                 <div class="cell gpd-clm">
-                    <img id="ipx6fq" src="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/50c5c17008f945eea5c66963d0af98cd_img_5518.jpeg"/>
+                    <img id="ipx6fq" src="/assets/uploads/image/jayden_carter.jpeg"/>
                     <div class="gpd-text">Carter (left) and Jayden (right) are working together to find out how to make this project possible.</div>
                 </div>
                 <div id="i2vdgb" class="cell gpd-clm"></div>
                 <div class="cell gpd-clm">
-                    <img id="ibssck" src="https://cdn.grapedrop.com/u1993efff77d0431dbcb1353739cd4cce/e3580048aabd4e57b7909e0c7d030295_fbla-members.jpeg"/>
+                    <img id="ibssck" src="/assets/uploads/image/group.jpg"/>
                     <div class="gpd-text">Our FBLA group together.</div>
                 </div>
             </div>
