--- a/index.html
+++ b/index.html
@@ -1708,7 +1708,7 @@
                     <div class="gdp-row gpd-grid">
                         <div class="cell gpd-clm" id="iz1s9k"></div>
                         <div class="cell gpd-clm" id="i26ncx">
-                            <img src="COVER_IMAGE" onmouseover="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/group.jpg'" onmouseout="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/jayden_carter.jpeg'" id="ih9kml"/>
+                            <img src="COVER_IMAGE" onmouseover="this.src='/assets/uploads/image/jayden_carter.jpeg'" id="ih9kml"/>
                         </div>
                         <div class="cell gpd-clm" id="iw5xmn"></div>
                     </div>
@@ -1719,7 +1719,7 @@
                     <div class="gdp-row gpd-grid">
                         <div class="cell gpd-clm" id="ilnr8v"></div>
                         <div class="cell gpd-clm" id="i6f5xg">
-                            <img src="COVER_IMAGE" onmouseover="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/group.jpg'" onmouseout="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/jayden_carter.jpeg'" id="i3rj2u"/>
+                            <img src="COVER_IMAGE" onmouseover="this.src='/assets/uploads/image/group.jpg'" onmouseout="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/jayden_carter.jpeg'" id="i3rj2u"/>
                         </div>
                         <div class="cell gpd-clm" id="ikahz1"></div>
                     </div>
