--- a/index.html
+++ b/index.html
@@ -1708,7 +1708,7 @@
                     <div class="gdp-row gpd-grid">
                         <div class="cell gpd-clm" id="iz1s9k"></div>
                         <div class="cell gpd-clm" id="i26ncx">
-                            <img src="/assets/uploads/image/jayden_carter.jpg" onmouseover="this.src='/assets/uploads/image/jayden_carter.jpeg'" id="ih9kml"/>
+                            <img src="/assets/uploads/image/jayden_carter.jpeg" onmouseover="this.src='/assets/uploads/image/jayden_carter.jpeg'" id="ih9kml"/>
                         </div>
                         <div class="cell gpd-clm" id="iw5xmn"></div>
                     </div>
