--- a/index.html
+++ b/index.html
@@ -1702,18 +1702,16 @@
                 <div data-cke-filler-webkit="end" data-cke-temp="1" style="display: block; width: 0px; height: 0px; padding: 0px; border: 0px; margin: 0px; position: absolute; top: 0px; left: -9999px; opacity: 0; overflow: hidden;">&nbsp;</div>
             </div>
             <div data-columns="1" class="row no-gutters" id="i3fwxe">
-                <div data-column="1" class="cell" id="i8o8gj">
-                    <meta charset="utf-8"/>
-                    <title>Change Image on Hover in CSS</title>
+                <div data-column="1" class="cell" id="i9k6t2">
                     <div class="gdp-row gpd-grid">
-                        <div class="cell gpd-clm" id="iz1s9k"></div>
-                        <div class="cell gpd-clm" id="i26ncx">
-                            <img src="/assets/uploads/image/group.jpg" onmouseover="this.src='/assets/uploads/image/jayden_carter.jpeg'" id="ih9kml"/>
+                        <div class="cell gpd-clm" id="ilnr8v"></div>
+                        <div class="cell gpd-clm" id="i6f5xg">
+                            <img src="/assets/uploads/image/group.jpg" onmouseover="this.src='/assets/uploads/image/group.jpg'" onmouseout="this.src='https://hmsfbla.1hsd.org/assets/uploads/image/jayden_carter.jpeg'" id="i3rj2u"/>
                         </div>
-                        <div class="cell gpd-clm" id="iw5xmn"></div>
+                        <div class="cell gpd-clm" id="ikahz1"></div>
                     </div>
-                    <div class="team-name1">Makaya Ferguson</div>
-                    <div class="team-pos1">Chairsperson</div>
+                    <div class="team-name1">Jayden Pace</div>
+                    <div class="team-pos1">Community Service Project Member</div>
                 </div>
                 <div data-column="1" class="cell" id="i9k6t2">
                     <div class="gdp-row gpd-grid">
