--- a/projects.html
+++ b/projects.html
@@ -763,7 +763,7 @@
             </div>
         </div>
     </section>
-    <a href="" class="gpd-link-box">
+    <a href="/#" class="gpd-link-box">
         <span id="inwpj6" class="gpd-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                 <path d="M7 12l5-5v3h4v4h-4v3l-5-5m15 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10m-2 0c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z"></path>
